2005-08-10  Carl Worth  <cworth@cworth.org>

	* Makefile.am:
	* RELEASING: Change release instructions to indicate new odd-micro
	version for in-progress development, and even-micro for released
	versions. Do a bit of snapshot->release renaming.

2005-08-10  Carl Worth  <cworth@cworth.org>

	* configure.in: Change CAIRO_VERSION from 0.9.0-head to 0.9.1.

	Patch from Behdad Esfahbod <behdad@cs.toronto.edu>:

	* configure.in: Update to use AC_INIT and AM_INIT_AUTOMAKE in
	recommended ways. Add support for substituting
	CAIRO_VERSION_MAJOR/MINOR/MICRO into generated headers.
	
	* src/cairo-features.h.in: Add CAIRO_VERSION_MAJOR/MINOR/MICRO and
	CAIRO_VERSION_STRING which are generated by configure.

2005-08-10  Carl Worth  <cworth@cworth.org>

	* src/cairo-path-data-private.h:
	* src/cairoint.h: Add cairo_private to the few pieces of data that
	were missing it.

2005-08-09  Vladimir Vukicevic  <vladimir@pobox.com>

	* src/cairo-glitz-surface.c: Don't crash on 0-width or 0-height
	glyphs; also correctly initialize entry->key.base.memory with the
	image cache image.

	* src/cairo-xlib-surface.c (_xlib_glyphset_cache_create_entry):
	Free allocated entry in case of error to avoid leaking memory.

2005-08-09  Carl Worth  <cworth@cworth.org>

	* src/cairo-arc-private.h:
	* src/cairo-ft-private.h:
	* src/cairo-meta-surface-private.h:
	* src/cairoint.h: Add cairo_private to several function prototypes
	that were missing it.

2005-08-09  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that sane clipping is done now. Add release
	versions for previously completed items.

	* test/.cvsignore: Ignore unantialiased-shapes.

2005-07-29  T Rowley  <tim.rowley@gmail.com>

	* src/cairo-atsui-font.c (_cairo_atsui_font_create_toy):
	Get cairo_toy_font_face_t type right.

2005-08-09  Carl Worth  <cworth@cworth.org>

	* configure.in: Add -head to CAIRO_VERSION after tagging with
	RELEASE_0_9_0.

2005-08-08  Carl Worth  <cworth@cworth.org>

	* NEWS: Added notes for release 0.9.0.
