@@ -1,3 +1,8 @@
+2005-08-10  Vladimir Vukicevic  <vladimir@pobox.com>
+
+	* src/cairo-glitz-surface.c: Additional fix for 0-width/0-height
+	glyphs.
+
 2005-08-10  Carl Worth  <cworth@cworth.org>
 
 	* Makefile.am:
